k8s/comment-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-deployment
  labels:
    app: comment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment
  template:
    metadata:
      labels:
        app: comment
    spec:
      containers:
        - name: comment
          image: rhinock/comment:latest
          ports:
            - containerPort: 9292
          resources: {}
