k8s/mongo-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-statefulset
  labels:
    app: mongo
spec:
  replicas: 1
  serviceName: mongo-service
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongo
          image: mongo:3.2
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 27017
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: mongo-volume
  volumeClaimTemplates:
    - metadata:
        name: mongo-volume
      spec:
        storageClassName: standard
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
