k8s/post-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-deployment
  labels:
    app: post
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post
  template:
    metadata:
      labels:
        app: post
    spec:
      containers:
        - name: post
          image: rhinock/post:latest
          ports:
            - containerPort: 5000
          resources: {}
