k8s/comment-service.yml
apiVersion: v1
kind: Service
metadata:
  name: comment-service
spec:
  selector:
    app: comment
  ports:
    - protocol: TCP
      port: 9292
      targetPort: 9292
