k8s/post-service.yml
apiVersion: v1
kind: Service
metadata:
  name: post-service
spec:
  selector:
    app: post
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
