k8s/ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  selector:
    app: ui
  ports:
    - protocol: TCP
      port: 9292
      targetPort: 9292
