k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: app.com
    http:
      paths:
        - path: /*
          pathType: Prefix
          backend:
            service:
              name: ui-service
              port:
                number: 9292
